--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,5 +15,8 @@ Suggests:
     rmarkdown,
     testthat (>= 2.1.0)
 biocViews:
+    StatisticalMethod
+    WholeGenome
+    Genetics
 VignetteBuilder: knitr
 Encoding: UTF-8
