--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,5 @@
 Package: Summix
 Version: 0.99.0
-Depends: nloptr
 LazyData: false
 Title: Summix R Package
 Description: This package contains the Summix method for estimating and adjusting for ancestry in genetic summary allele frequency data. The function summix estimates reference ancestry proportions using a mixture model. The adjAF function produces ancestry adjusted allele frequencies for an observed sample with ancestry proportions matching a target person or sample.
@@ -9,6 +8,7 @@ Authors@R: c(
     person("Matesi", "Gregory", email = "gregory.matesi@ucdenver.edu", role = "aut"))
 License: MIT + file LICENSE
 RoxygenNote: 7.1.1
+Imports: nloptr
 Suggests: 
     knitr,
     rmarkdown,
