--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: Summix
-Version: 0.99.9
+Version: 1.0.0
 LazyData: false
-Title: Summix R Package
+Title: Summix: A method to estimate and adjust for population structure in genetic summary data
 Description: This package contains the Summix method for estimating and adjusting for ancestry in genetic summary allele frequency data. The function summix estimates reference ancestry proportions using a mixture model. The adjAF function produces ancestry adjusted allele frequencies for an observed sample with ancestry proportions matching a target person or sample.
 Authors@R: c(
     person("Audrey", "Hendricks", email = "audrey.hendricks@ucdenver.edu", role = "cre"),
@@ -15,7 +15,7 @@ biocViews: StatisticalMethod, WholeGenome, Genetics
 VignetteBuilder: knitr
 Encoding: UTF-8
 Depends:
-    R (>= 4.0)
+    R (>= 4.1)
 Imports: 
     nloptr,
     methods
