--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,7 +9,7 @@ Authors@R: c(
 License: MIT + file LICENSE
 RoxygenNote: 7.1.1
 Suggests: 
-    knitr,
+    rmarkdown,
     testthat (>= 2.1.0)
 biocViews: StatisticalMethod, WholeGenome, Genetics
 VignetteBuilder: knitr
