--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,7 +5,7 @@ Title: Summix: A method to estimate and adjust for population structure in genet
 Description: This package contains the Summix method for estimating and adjusting for ancestry in genetic summary allele frequency data. The function summix estimates reference ancestry proportions using a mixture model. The adjAF function produces ancestry adjusted allele frequencies for an observed sample with ancestry proportions matching a target person or sample.
 Authors@R: c(
     person("Audrey", "Hendricks", email = "audrey.hendricks@ucdenver.edu", role = "cre"),
-    person("Matesi", "Gregory", email = "gregory.matesi@ucdenver.edu", role = "aut"))
+    person("Stoneman", "Haley", email = "hayley.stoneman@cuanschutz.edu", role = "aut"))
 License: MIT + file LICENSE
 RoxygenNote: 7.1.1
 Suggests: 
